<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.CreateAccount">

    <TextView
        android:id="@+id/create_an_a"
        android:layout_width="310dp"
        android:layout_height="72dp"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="0sp"
        android:text="@string/create_an_a"
        android:textAppearance="@style/create_an_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_to"
        android:layout_width="295dp"
        android:layout_height="41dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/register_to"
        android:textAppearance="@style/register_to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintTop_toBottomOf="@id/create_an_a"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="116dp" />

    <TextView
        android:id="@+id/email_phone"
        android:layout_width="185dp"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="1sp"
        android:text="@string/email_addre"
        android:textAppearance="@style/email_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_to" />

    <EditText
        android:id="@+id/editAccessCode"
        android:layout_width="333dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape"
        android:drawableStart="@drawable/ic_outline_account_circle_24"
        android:drawablePadding="5dp"
        android:hint="@string/enter_your_"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_phone" />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="185dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="1sp"
        android:text="@string/phone_numbe"
        android:textAppearance="@style/email_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editAccessCode" />

    <EditText
        android:id="@+id/enterPhoneNumber"
        android:layout_width="333dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape"
        android:drawableStart="@drawable/ic_outline_account_circle_24"
        android:drawablePadding="5dp"
        android:hint=" enter your Phone Number"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNumber" />

    <TextView
        android:id="@+id/access_code"
        android:layout_width="185dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="1sp"
        android:text="@string/access_code_txt"
        android:textAppearance="@style/email_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterPhoneNumber" />

    <EditText
        android:id="@+id/enterAccessCode"
        android:layout_width="333dp"
        android:layout_height="42dp"
        android:background="@drawable/shape"
        android:drawableStart="@drawable/ic_outline_account_circle_24"
        android:drawablePadding="5dp"
        android:hint=" enter your Access Code"
        android:paddingStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/access_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="499dp" />

    <TextView
        android:id="@+id/confirmAccessCode"
        android:layout_width="185dp"
        android:layout_height="41dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="1sp"
        android:layout_marginTop="10dp"
        android:text="Confirm Access Code"
        app:layout_constraintTop_toBottomOf="@id/enterAccessCode"
        android:textAppearance="@style/email_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="562dp" />

    <EditText
        android:id="@+id/enterConfirmAccessCode"
        android:layout_width="333dp"
        android:layout_height="42dp"
        android:background="@drawable/shape"
        android:drawableStart="@drawable/ic_outline_account_circle_24"
        android:drawablePadding="5dp"
        android:hint=" Confirm your Access Code"
        android:paddingStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/confirmAccessCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="603dp" />

    <Button
        android:id="@+id/con"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/backbutton"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/continue_txt"
        android:textAppearance="@style/continue_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterConfirmAccessCode" />

    <TextView
        android:id="@+id/don_t_have_1"
        android:layout_width="319dp"
        android:layout_height="39dp"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="-1sp"
        android:text="@string/don_t_have_t"
        android:textAppearance="@style/don_t_have_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/con" />


</androidx.constraintlayout.widget.ConstraintLayout>