<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="5dp"
    tools:context=".register.LoginWithAccess">


    <TextView
        android:id="@+id/welcome_"
        android:layout_width="302dp"
        android:layout_height="34dp"
        android:layout_marginTop="84dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="0sp"
        android:text="@string/welcome_"
        android:textAppearance="@style/welcome_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/sign_in_to_"
        android:layout_width="248dp"
        android:layout_height="23dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/sign_in_to_"
        android:textAppearance="@style/sign_in_to_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.324"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="77dp"
        android:layout_height="59dp"
        android:layout_marginTop="72dp"
        android:clipToOutline="true"
        android:paddingStart="5dp"
        android:paddingLeft="10dp"
        android:src="@drawable/gideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_to_" />

    \


    <TextView
        android:id="@+id/sunday_gide"
        android:layout_width="206dp"
        android:layout_height="39dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="1sp"
        android:text="@string/sunday_gide"
        android:textAppearance="@style/sunday_gide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image" />


    <TextView
        android:id="@+id/ak19_phs_cs"
        android:layout_width="161dp"
        android:layout_height="53dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="1sp"
        android:text="@string/ak19_phs_cs"
        android:textAppearance="@style/ak19_phs_cs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sunday_gide"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="323dp" />

    <TextView
        android:id="@+id/access_code"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="1sp"
        android:text="@string/access_code"
        android:textAppearance="@style/access_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunday_gide" />

    <EditText
        android:id="@+id/editAccessCode"
        android:layout_width="333dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape"
        android:drawableStart="@drawable/ic_outline_lock_24"
        android:drawablePadding="5dp"
        android:hint=" enter your access code"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/access_code"

        />

    <TextView
        android:id="@+id/incorrect_d"
        android:layout_width="277dp"
        android:layout_height="16dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="1sp"
        android:text="Incorrect details, please confirm your access code"
        android:textAppearance="@style/incorrect_d"
        android:textColor="#A51D2C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editAccessCode" />

    <Button
        android:id="@+id/button"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/backbutton"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

