<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.CreateAccount">

    <TextView
        android:id="@+id/create_an_a"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="0sp"
        android:text="@string/create_an_a"
        android:textAppearance="@style/create_an_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_to"
        android:layout_width="295dp"
        android:layout_height="41dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/register_to"
        android:textAppearance="@style/register_to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintTop_toBottomOf="@id/create_an_a"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="116dp" />

    <TextView
        android:id="@+id/fullName"
        android:layout_width="214dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="1sp"
        android:text="Full Name"
        android:textAppearance="@style/email_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_to" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="180dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape"
        android:drawablePadding="5dp"
        android:hint=" Surname"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toStartOf="@id/firstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="174dp"
        android:layout_height="65dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape"
        android:hint=" FirstName"
        android:paddingStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/fullName"
        app:layout_constraintBottom_toTopOf="@id/middleName"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="223dp" />

    <EditText
        android:id="@+id/middleName"
        android:layout_width="201dp"
        android:layout_height="63dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape"
        android:hint=" MiddleName"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surname" />

    <EditText
        android:id="@+id/enterConfirmAccessCode"
        android:layout_width="333dp"
        android:layout_height="62dp"
        android:background="@drawable/shape"
        android:hint=" Confirm your Access Code"
        android:layout_marginTop="10dp"
        android:paddingStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/middleName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        />

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:background="@drawable/backbutton"
        android:gravity="center_horizontal|center_vertical"
        android:text="Register"
        android:textAppearance="@style/continue_style"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="145dp"
        app:layout_constraintTop_toBottomOf="@id/enterConfirmAccessCode"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="603dp" />

    <TextView
        android:id="@+id/don_t_have_"
        android:layout_width="319dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="-1sp"
        android:text="@string/don_t_have_t"
        android:textAppearance="@style/don_t_have_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/continue_btn" />



</androidx.constraintlayout.widget.ConstraintLayout>